--- a/Client/Components/Pages/Home.razor
+++ b/Client/Components/Pages/Home.razor
@@ -26,7 +26,7 @@
     </NotAuthorized>
 </AuthorizeView>
 <RadzenRow JustifyContent="JustifyContent.Center" AlignItems="AlignItems.Center">
-    <RadzenTextBox Placeholder="Sök produktnamn / id..." @oninput=@(args => FindProduct(args.Value.ToString()))></RadzenTextBox>
+    <RadzenTextBox Placeholder="Sök produktnamn / id..." ValueChanged="FindProduct"></RadzenTextBox>
 </RadzenRow>
 <div class="row justify-content-md-center">
     <Virtualize Context="product" Items="FilteredProducts">
@@ -114,7 +114,7 @@
 
         }
     }
-    private async Task FindProduct(string value)
+    private void FindProduct(string value)
     {
         if (int.TryParse(value, out _))
         {
